2009-07-23  Brady Eidson  <beidson@apple.com>

        Reviewed by Geoff Garen.

        WebCore has a few places that don't gracefully handle a null request returned from willSendRequest.
        https://bugs.webkit.org/show_bug.cgi?id=27595

        * http/tests/misc/resources/redirect-to-http-url.php: Added.
        * http/tests/misc/will-send-request-returns-null-on-redirect-expected.txt: Added.
        * http/tests/misc/will-send-request-returns-null-on-redirect.html: Added.
        * platform/gtk/Skipped:
        * platform/qt/Skipped:

2009-07-23  Pierre d'Herbemont  <pdherbemont@apple.com>

        Fix layout tests, no review.

        Actually add the video-layer tests results for leopard, that were
        forgotten in r46302. Also add test results for windows.

        * platform/mac-leopard/fast/layers/video-layer-expected.png: Added.
        * platform/mac-leopard/fast/layers/video-layer-expected.txt: Added.
        * platform/win/fast/layers/video-layer-expected.txt: Added.

2009-07-23  Pierre d'Herbemont  <pdherbemont@apple.com>

        Reviewed by Simon Fraser.

        Following changes on the video controls, video-layer tests results need to
        be updated in order to fix the layout tests.

        * platform/mac-leopard/fast/layers/video-layer-expected.checksum: Copied from LayoutTests/platform/mac/fast/layers/video-layer-expected.checksum.
        * platform/mac-leopard/fast/layers/video-layer-expected.png: Copied from LayoutTests/platform/mac/fast/layers/video-layer-expected.png.
        * platform/mac-leopard/fast/layers/video-layer-expected.txt: Copied from LayoutTests/platform/mac/fast/layers/video-layer-expected.txt.
        * platform/mac/fast/layers/video-layer-expected.checksum: Removed.
        * platform/mac/fast/layers/video-layer-expected.png: Removed.
        * platform/mac/fast/layers/video-layer-expected.txt: Updated.

2009-07-23  Mark Rowe  <mrowe@apple.com>

        Rubber-stamped by Dan Bernstein.
