@@ -1,3 +1,11 @@
+2009-07-23  Mark Rowe  <mrowe@apple.com>
+
+        Reviewed by Brady Eidson.
+
+        Add a workaround for <rdar://problem/6925892> to the test that it affects.
+
+        * http/tests/misc/redirect-to-about-blank.html:
+
 2009-07-23  Brady Eidson  <beidson@apple.com>
 
         Reviewed by Geoff Garen.
